--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,10 +1,16 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "commonjs",
-    "rootDir": "./src",
-    "outDir": "./dist",
+    "target": "ESNext",               // or ESNext – modern Node supports it
+    "module": "NodeNext",             // ← this is key for ESM + Node.js rules
+    "moduleResolution": "NodeNext",   // ← enforces .js extensions in TS errors too
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "esModuleInterop": true
-  }
+    "skipLibCheck": true,
+    "outDir": "./dist",               // if you ever want to build
+    "rootDir": "./src",
+    "sourceMap": true
+  },
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules", "dist"]
 }
